--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -21,6 +22,7 @@
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
   crossorigin="anonymous"
 />
+  
   </head>
   <body>
     <div id="root"></div>
